--- a/style.css
+++ b/style.css
@@ -38,7 +38,8 @@ html , body{
 
 #hero{
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
+    height: 100vmin;
     background-color: black;
     color: white;
     position: relative;
@@ -144,7 +145,8 @@ html , body{
     padding-top: 100px;
     width: 100%;
     padding-right: 10vw;
-    height: 100vh;
+    /* height: 100vh; */
+    height: 100vmin;
     color: white;
 }
 
@@ -184,7 +186,8 @@ html , body{
 
 #about{
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
+    height: 100vmin;
     background-color: black;
     color: white;
     padding: 10vw 10vw;
@@ -250,6 +253,7 @@ html , body{
     padding: 40px 30px;
     background-color: black;
     color: white;
+    min-height: 10vh;
 }
 
 #footerleft{
