--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,25 +1,40 @@
 @media (max-width:600px) {
 
-/* second-hero */
-    
-#second-hero{
-    height: 50vh;
-    padding-left: 5vw;
-}
-    /* About */
+    /* second-hero */
 
-    #about{
-        flex-direction: column;
-        height: 110vh;
-        gap: 10px;
-        
+    #second-hero {
+        height: 50vh;
+        padding-left: 5vw;
     }
 
-    #footer{
+    /* About */
+
+    #about {
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+        background-color: black;
+        color: white;
+        padding: 20vw 0;
+        display: flex;
+        align-items: center;
+        gap: 50px;
+    }
+
+    #subscribe {
+        padding-top: 35vw;
+    }
+
+    #hero #herofooter {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    #footer {
         flex-direction: column;
         gap: 20px;
     }
 
-/* subscribe */
+    /* subscribe */
 
 }
